# sgx_buyback_pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: management_tracking.yaml  refresh_sgx_companies.yaml  scraper_test.yaml  sgx_buyback_scraper.yaml  sgx_filings_scraper.yaml  shareholders_tracking.yaml  sync_screener_shareholders.yaml
data/: sgx_companies.json  sgx_companies_lookup.json  sgx_top_100_mcap_companies.csv  sgx_top_70_mcap_companies.csv
data/scraper_output/: sgx_buybacks.json  sgx_buybacks_continue.json  sgx_filings.json
data/scraper_output/sgx_buyback/: sgx_buybacks_not_top_70.csv  (+2 more)
sgx_scraper/: main_cli.py  refresh_sgx_companies.py
sgx_scraper/alerting/: build_template.py  filter_data_alert.py  mailer.py
sgx_scraper/config/: settings.py
sgx_scraper/fetch_sgx_buyback/: models.py  parser_sgx_buyback.py
sgx_scraper/fetch_sgx_filings/: models.py  parser_sgx_filings.py
sgx_scraper/fetch_shareholders/: api.py  tracking.py
sgx_scraper/sgx_api/: scraper_sgx_api.py
sgx_scraper/track_management/: appointment.py  cessation.py  tracking.py
sgx_scraper/utils/: cli_helper.py  constant.py  sgx_parser_helper.py  symbol_matching_helper.py
src/: main_cli.py  refresh_sgx_companies.py
src/config/: settings.py
src/fetch_sgx_buyback/: get_sgx_companies.py  models.py  parser_sgx_buyback.py  scraper_sgx_api.py  scraper_sgx_detail.py
src/fetch_sgx_filings/: models.py  parser_sgx_filing.py  parser_sgx_filings.py
src/sgx_api/: scraper_sgx_api.py
src/utils/: cli_helper.py  sgx_parser_helper.py  symbol_matching_helper.py
(+27 files in other folders)
